fixed div size to avoid overflow of code

--- a/styles.css
+++ b/styles.css
@@ -356,6 +356,8 @@ h4 {
 
   #code-display {
     margin-left: 25px;
+    overflow: hidden;
+    height: 500px;
   }
 
   .home-icon {
